<resources>
    <string name="app_name">Jogo</string>

    <string name="btnComo">Como Jogar</string>
    <string name="btnComeco">Começar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btndica">Dica 💡 </string>
    <string name="btnFechar1">Fechar</string>
    <string name="btnProximo">Próxima fase</string>
    <string name="btndica2">Dica 💡 </string>
    <string name="btnFechar2">Fechar</string>
    <string name="btnProximo2">Próxima fase</string>
    <string name="btnfinal1">Cozinhando</string> //botão para a tela final com a resolução da fase 1
    <string name="btnfinal2">Ache o País</string> //resolução fase 2
    <string name="btnfinal3">Poder do Sol</string> // resolução fase 3
    <string name="btncodigo">Código</string> // botão para colocar o código
    <string name="btntela">próximo</string>
    <string name="btncuriosidade">Curiosidade</string> // botão para curiosidade no final
    <string name="btnconfirmar">Confirmar</string> // botão para confirmar o código escrito na ultima parte
    <string name="btnFechar3">Fechar</string>
    <string name="btnContinuar">Continuar</string>
    <string name="btnContinuar2">Continuar</string>
    <string name="btnRejogar">Tentar um recorde melhor?</string>

    <string name="txtComo">Este jogo consiste em resolver 3 minijogos seguidos, no final, você poderá rever a
        resolução para colocar um código e terminar o jogo. Coloque um apelido para que fique registrado o
        tempo em que você conseguiu concluir o jogo.
        Boa sorte! E que a batata esteja com você!!</string>
    <string name="txtFase1">Descasque a batata para fazer o purê</string>
    <string name="txtDica1">Clique na batata mais de uma vez</string>
    <string name="txtFase2">Chocolate caro mas muito bom</string>
    <string name="txtDica2">Chocolate Belga</string>
    <string name="txtDica3">Deixe o ambiente escuro</string>
    <string name="txtCódigo">Digite o código!</string>
    <string name="txtErrado">Código errado, reveja o final das fases para colocar o código correto</string>
    <string name="txtCuriosidade">Dio Brando é um vampiro da linha de mangás e animes Jojo\'s Bizarre
    Adventures, por isso ele não aparece na luz do dia.</string>
    <string name="txtFase3Antes">Jogue essa fase em um ambiente claro ou ligue as luzes para jogar a próxima fase</string>
    <string name="txtFinalJogo">Parabéns </string>
    <string name="txtContinuaçãoo"> Você chegou ao fim desse jogo em</string>
    <string name="txtFim">Fim de Jogo</string>
    <string name="txtnick">Apelido</string>
    <string name="txtIdade">Idade</string>
    <string name="txtTitulo">Coloque seu nome e idade</string>
    <string name="hintNome">Nome</string>
    <string name="hintIdade">Idade</string>

    <string name="descimg1">Batata querendo ser descascada</string>
    <string name="descimg2">Purê fofo</string>
    <string name="descimg3">Mapa mundi</string>
    <string name="descimg4">Caixão fechado</string>
    <string name="descimg5">Dio</string>
    <string name="descimg6">Chocolates Belga</string>
    <string name="descimg7">Alemanha</string>
    <string name="descimg8">Belgica</string>
    <string name="descimg9">Europa</string>
    <string name="descimg10">DIOO</string>

    <string name="hint1">Código</string>
    <string name="btnLocalizacao">Ver minha localização</string>
    <string name="txtSalvar">Salvar Nome</string>
    <string name="txtCodigo">Código</string>
    <string name="btnMedo">Medo</string>
    <string name="txtTentar">Tentar Um tempo melhor</string>
    <string name="txtDoMedo">Estou de olho em você</string>
</resources>
