<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:translationY="60dp">

            <Button
                android:id="@+id/btnInstrucao"
                android:layout_width="254dp"
                android:layout_height="64dp"
                android:text="@string/btninstrucao"
                android:translationX="70dp" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="39dp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="254dp"
                android:layout_height="64dp"
                android:text="@string/btnfinal1"
                android:translationX="70dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="254dp"
                android:layout_height="64dp"
                android:text="@string/btnfinal2"
                android:translationX="70dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="254dp"
                android:layout_height="64dp"
                android:text="@string/btnfinal3"
                android:translationX="70dp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="254dp"
                android:layout_height="64dp"
                android:text="@string/btncodigo"
                android:translationX="70dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>