<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/txtCódigo"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtcod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint1"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnconfirmar"
            android:layout_width="254dp"
            android:layout_height="64dp"
            android:text="@string/btnconfirmar"
            android:translationX="70dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>