<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/txtFim"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:text="@string/txtFinalJogo"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="24sp" />

        <TextView
            android:id="@+id/txtContinuacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContinuaçãoo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cronometro"
            android:layout_width="275dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnRejogar"
            android:layout_width="254dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:onClick="rejogar"
            android:text="@string/txtTentar" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="wrap_content"
            android:layout_height="231dp"
            android:layout_gravity="center"
            android:src="@drawable/parabains" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>